--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,15 @@
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
-
+.App {
+  margin:0 auto; 
+  width:980px;
+  height:980px;
+}
+.Appicon {
+  width:30px;
+  height:30px;
+}
 .App-header {
   background-color: #222;
   height: 150px;
